fix z-index

--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -47,7 +47,7 @@ body{
     }
     .form{
         position: absolute; 
-        z-index: -1;
+        z-index: 5;
     }
     .hide{
         display: none;
@@ -103,13 +103,13 @@ body{
         }
     }
     .header-nav{ 
-        position: absolute;
-        z-index: 100;
         top: 92px;
         height: 90vh;
         width: 100%;
         background-color: $secondary-color;
         overflow: hidden;
+        position: absolute;
+        z-index: 200;
         ul{
             position: relative;
             animation: 500ms nav;
@@ -120,6 +120,10 @@ body{
             font-size: 1.8rem;
             line-height: 5rem;
         }
+    }
+    .header-nav-hide{
+        z-index: -100;
+        display: none;
     }
 }
 
@@ -231,7 +235,6 @@ body{
     background-color: $main-color;
     padding: 5rem 0;
     position: relative;
-    z-index: -5;
     &-form2a{
         left: -8rem;
         top: 15rem;
@@ -278,6 +281,14 @@ body{
             -1.5px  1.5px 0 $black,
             1.5px  1.5px 0 $black;
         }
+        a{
+            position: relative;
+            z-index: 100;
+        }
+    }
+    article{
+        position: relative;
+        z-index: 100;
     }
     .programmation-filter-active{
         background-color: $secondary-color;
